--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -892,7 +892,7 @@
         Vậy là bạn đã vừa hoàn thành cách nấu chè hạt đác không quá khó mà vẫn vô cùng hấp dẫn rồi. Để món chè ngon nhất, bạn chỉ cần lưu ý thực hiện kỹ khâu sơ chế hạt đác sao cho bớt nhớt và mùi. Những ngày nóng mà nấu chè hạt đác giải nhiệt thì tuyệt vời hơn cả. Chúc bạn thực hiện thành công!\n
 
         "</string>
-    <string name="cach_lam21">"
+    <string name="cach_lam21" formatted="false">"
         Hạt kê có nguồn gốc từ Ấn Độ, có vỏ bên ngoài màu nâu xám, khi bóc ra sẽ lộ những hạt tròn màu vàng nhạt. Tuy kích thước hạt kê có kích thước nhỏ nhưng lại chứa thành phần dinh dưỡng và khoáng chất thiết yếu cao. Trong mỗi hạt kê có chứa 73%  Hydrat Carbon, 10,8% Protein, 2,9% Lipid. Ngoài ra, hàm lượng Vitamin B1, B2 trong hạt kê cao gấp 1 – 1,5 lần so với gạo. Hạt kê có tác dụng tăng cường trí nhớ, làm chậm quá trình lão hóa, hỗ trợ giảm cân, giải nhiệt cơ thể… Do đó, hạt kê được chế biến thành nhiều món ăn hấp dẫn như chè hạt kê, cháo hạt kê, cơm kê… Tuy vậy, nếu bạn không khéo léo và không nắm được công thức nấu chuẩn thì sẽ dễ làm mất đi hương thơm dịu nhẹ của kê và vị ngọt của chè. Cùng xem bí quyết nấu món chè kê này thôi nào!\n
         Chè hạt kê đậu xanh\n
         Nguyên liệu nấu chè hạt kê đậu xanh\n
